# GraspNet-Edge

./: GraspPosePre.py  README.md  airbot_grasp.py  command_test.sh  command_train.sh  data_process.py  ddp_test.py  demo.py  generate_cloud.py  grasp.pth  mymodel.onnx  readme.txt  requirements.txt  save_new_onnx.py  to_onnx.py  train.py  train_distributed.py
dataset/: command_generate_tolerance_label.sh  graspnet_dataset.py
doc/20231016152551/: glm.txt
doc/20231016152551/source/: keep.xyz
graspnetAPI/examples/: exam_grasp_format.py
graspnetAPI/graspnetAPI/: graspnet_eval.py
graspnetAPI/graspnetAPI/utils/: eval_utils.py  vis.py
models/: backbone.py  backbone_optimized.py  graspnet.py  modules.py  modules.py_bak
pointnet2/: pointnet2_modules.py  pointnet2_modules_pytorch.py  pointnet2_modules_pytorch.py_bak  pointnet2_utils.py
python-interface/: CMakeLists.txt
python-interface/examples/: basic_example.py
python-interface/src/: main.cpp
utils/: .loss_utils.py.swp  cloud_utils.py  collision_detector.py  generate_cloud.py  get_image.py  loss_utils.py  merge_cloud.py  quaternion_utils.py  visual.model.py
